Fix DA table action buttons alignment

--- a/app/assets/stylesheets/v2_style.css.scss
+++ b/app/assets/stylesheets/v2_style.css.scss
@@ -172,3 +172,4 @@ hr.dashboard {
   margin: 0;
   color: #aaa;
 }
+.table .da-actions { min-width: 180px; margin-bottom: 5px; }
